--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=.\\sqlexpress;Initial Catalog=apartmentDB;Integrated Security=True;Encrypt=True;TrustServerCertificate=True"
+  }
 }
