--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,5 +5,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "LogSnag": {
+    "Project": "",
+    "Token": "",
+    "DefaultChannel": "billing",
+    "OutstandingWarningThreshold": 50000,
+    "CollectionEfficiencyWarning": 85
   }
 }
