--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=.\\sqlexpress;Initial Catalog=apartmentDB;Integrated Security=True;Encrypt=True;TrustServerCertificate=True"
+  },
+  "LogSnag": {
+    "Project": "",
+    "Token": "",
+    "DefaultChannel": "billing",
+    "OutstandingWarningThreshold": 50000,
+    "CollectionEfficiencyWarning": 85
   }
 }
