change allmost everything

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.\\sqlexpress;Initial Catalog=apartmentDB;Integrated Security=True;Encrypt=True;TrustServerCertificate=True"
+    "DefaultConnection": "Data Source=.\\sqlexpress;Initial Catalog=apartmentDB_clean_schema;Integrated Security=True;Encrypt=True;TrustServerCertificate=True"
   },
   "LogSnag": {
     "Project": "",
