Added a gmail verification

--- a/appsettings.json
+++ b/appsettings.json
@@ -15,5 +15,13 @@
     "DefaultChannel": "billing",
     "OutstandingWarningThreshold": 50000,
     "CollectionEfficiencyWarning": 85
+  },
+  "EmailSettings": {
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "SmtpUser": "niinii09488561575@gmail.com",
+    "SmtpPass": "vxxa rkhd oulb bomn",
+    "FromAddress": "noreply@example.com",
+    "FromName": "Apartment Management"
   }
 }
