--- a/appsettings.json
+++ b/appsettings.json
@@ -23,5 +23,8 @@
     "SmtpPass": "vxxa rkhd oulb bomn",
     "FromAddress": "noreply@example.com",
     "FromName": "Apartment Management"
+  },
+  "LeaseSettings": {
+    "LandlordName": "Property Management Company"
   }
 }
